--- a/style.css
+++ b/style.css
@@ -6,14 +6,13 @@
   flex-direction: row;
   align-items: end;
   z-index: -1;
-  opacity: 0.5;
   transition: 400ms;
   overflow: hidden;
   pointer-events: none;
   max-width: calc(100% - 7em);
   mask: linear-gradient(90deg, transparent 0%, black 3%, black 97%, transparent 100%);
 }
-.sttc--root:hover {
+.sttc--root:hover > .sttc--wrapper {
   opacity: 1;
 }
 .sttc--root > .sttc--wrapper {
@@ -22,9 +21,13 @@
   transition: 400ms;
   filter: drop-shadow(0 0 6px rgba(0 0 0 / 0.5));
   cursor: pointer;
+  opacity: 0.5;
 }
 .sttc--root > .sttc--wrapper.sttc--absent > .sttc--img {
   filter: grayscale(1);
+}
+.sttc--root > .sttc--wrapper.sttc--chatty {
+  opacity: 1;
 }
 .sttc--root > .sttc--wrapper:hover {
   transform: translateY(10%);
