--- a/style.less
+++ b/style.less
@@ -9,14 +9,16 @@
 	// justify-content: end;
 	align-items: end;
 	z-index: -1;
-	opacity: 0.5;
+	// opacity: 0.5;
 	transition: 400ms;
 	overflow: hidden;
 	pointer-events: none;
 	max-width: calc(100% - 7em);
 	mask: linear-gradient(90deg, transparent 0%, black 3%, black 97%, transparent 100%);
 	&:hover {
-		opacity: 1;
+		> .sttc--wrapper {
+			opacity: 1;
+		}
 	}
 
 	> .sttc--wrapper {
@@ -25,8 +27,12 @@
 		transition: 400ms;
 		filter: drop-shadow(0 0 6px rgba(0 0 0 / 0.5));
 		cursor: pointer;
+		opacity: 0.5;
 		&.sttc--absent > .sttc--img {
 			filter: grayscale(1);
+		}
+		&.sttc--chatty {
+			opacity: 1;
 		}
 		&:hover {
 			transform: translateY(10%);
