--- a/style.css
+++ b/style.css
@@ -16,11 +16,8 @@
   opacity: 1;
 }
 .sttc--root > .sttc--wrapper {
-  height: 140px;
   transform: translateY(50%);
   transition: 400ms;
-  filter: drop-shadow(0 0 6px rgba(0 0 0 / 0.5));
-  cursor: pointer;
   opacity: 0.5;
 }
 .sttc--root > .sttc--wrapper.sttc--absent > .sttc--img {
@@ -29,13 +26,157 @@
 .sttc--root > .sttc--wrapper.sttc--chatty {
   opacity: 1;
 }
-.sttc--root > .sttc--wrapper:hover {
+.sttc--root > .sttc--wrapper:hover,
+.sttc--root > .sttc--wrapper.sttc--hover {
   transform: translateY(10%);
 }
-.sttc--root > .sttc--wrapper > .sttc--img {
+.sttc--wrapper {
+  height: 140px;
+  filter: drop-shadow(0 0 6px rgba(0 0 0 / 0.5));
+  cursor: pointer;
+}
+.sttc--wrapper > .sttc--img {
   height: 100%;
   object-fit: contain;
   object-position: top;
   pointer-events: all;
   transition: 400ms;
+}
+.sttc--blocker {
+  position: fixed;
+  inset: 0;
+  z-index: 40000;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.sttc--blocker > .sttc--wrapper {
+  position: absolute;
+  z-index: 1;
+}
+.sttc--blocker > .sttc--content {
+  backdrop-filter: blur(10px);
+  position: absolute;
+  top: 2em;
+  left: 2em;
+  right: 2em;
+  overflow: auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1em;
+}
+.sttc--blocker > .sttc--content > .sttc--costume {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  cursor: pointer;
+  transition: 200ms;
+  scale: 0.9;
+  animation-duration: 0.5s;
+  animation-name: sttc--enter;
+  animation-delay: 0.1s;
+  animation-fill-mode: backwards;
+  animation-timing-function: cubic-bezier(0.26, 0.53, 0.74, 1.48);
+}
+.sttc--blocker > .sttc--content > .sttc--costume:hover {
+  scale: 1;
+}
+.sttc--blocker > .sttc--content > .sttc--costume:nth-child(1) {
+  animation-delay: 0.2s;
+}
+.sttc--blocker > .sttc--content > .sttc--costume:nth-child(2) {
+  animation-delay: 0.3s;
+}
+.sttc--blocker > .sttc--content > .sttc--costume:nth-child(3) {
+  animation-delay: 0.4s;
+}
+.sttc--blocker > .sttc--content > .sttc--costume:nth-child(4) {
+  animation-delay: 0.5s;
+}
+.sttc--blocker > .sttc--content > .sttc--costume:nth-child(5) {
+  animation-delay: 0.6s;
+}
+.sttc--blocker > .sttc--content > .sttc--costume:nth-child(6) {
+  animation-delay: 0.7s;
+}
+.sttc--blocker > .sttc--content > .sttc--costume:nth-child(7) {
+  animation-delay: 0.8s;
+}
+.sttc--blocker > .sttc--content > .sttc--costume:nth-child(8) {
+  animation-delay: 0.9s;
+}
+.sttc--blocker > .sttc--content > .sttc--costume:nth-child(9) {
+  animation-delay: 1s;
+}
+.sttc--blocker > .sttc--content > .sttc--costume:nth-child(10) {
+  animation-delay: 1.1s;
+}
+.sttc--blocker > .sttc--content > .sttc--costume:nth-child(11) {
+  animation-delay: 1.2s;
+}
+.sttc--blocker > .sttc--content > .sttc--costume:nth-child(12) {
+  animation-delay: 1.3s;
+}
+.sttc--blocker > .sttc--content > .sttc--costume:nth-child(13) {
+  animation-delay: 1.4s;
+}
+.sttc--blocker > .sttc--content > .sttc--costume:nth-child(14) {
+  animation-delay: 1.5s;
+}
+.sttc--blocker > .sttc--content > .sttc--costume:nth-child(15) {
+  animation-delay: 1.6s;
+}
+.sttc--blocker > .sttc--content > .sttc--costume:nth-child(16) {
+  animation-delay: 1.7s;
+}
+.sttc--blocker > .sttc--content > .sttc--costume:nth-child(17) {
+  animation-delay: 1.8s;
+}
+.sttc--blocker > .sttc--content > .sttc--costume:nth-child(18) {
+  animation-delay: 1.9s;
+}
+.sttc--blocker > .sttc--content > .sttc--costume:nth-child(19) {
+  animation-delay: 2s;
+}
+.sttc--blocker > .sttc--content > .sttc--costume:nth-child(20) {
+  animation-delay: 2.1s;
+}
+.sttc--blocker > .sttc--content > .sttc--costume:nth-child(21) {
+  animation-delay: 2.2s;
+}
+.sttc--blocker > .sttc--content > .sttc--costume:nth-child(22) {
+  animation-delay: 2.3s;
+}
+.sttc--blocker > .sttc--content > .sttc--costume:nth-child(23) {
+  animation-delay: 2.4s;
+}
+.sttc--blocker > .sttc--content > .sttc--costume:nth-child(24) {
+  animation-delay: 2.5s;
+}
+.sttc--blocker > .sttc--content > .sttc--costume:nth-child(25) {
+  animation-delay: 2.6s;
+}
+.sttc--blocker > .sttc--content > .sttc--costume:nth-child(25) ~ .sttc--costume {
+  animation-delay: 2.7s;
+}
+.sttc--blocker > .sttc--content > .sttc--costume > img {
+  flex: 1 1 auto;
+  height: calc(100% - 1lh);
+}
+.sttc--blocker > .sttc--content > .sttc--costume > .sttc--label {
+  flex: 0 0 1lh;
+  height: 1lh;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  text-align: center;
+}
+@keyframes sttc--enter {
+  0% {
+    opacity: 0;
+    scale: 0.5;
+  }
+  100% {
+    opacity: 1;
+    scale: 0.9;
+  }
 }
