--- a/style.less
+++ b/style.less
@@ -1,3 +1,5 @@
+@import url('./UserSettings.style.css');
+
 .sttc--root {
 	position: absolute;
 	bottom: calc(100% - 16px);
@@ -125,3 +127,5 @@
 		scale: 0.9;
 	}
 }
+
+
